# butler-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
bot/: CMakeLists.txt  alarm_utils.cpp  alarm_utils.h  create_alarm.cpp  create_alarm.h  create_fixed_alarm.cpp  create_fixed_alarm.h  main.cpp
db/: CMakeLists.txt
db/executable/: CMakeLists.txt  main.cpp
db/include/db/: alarm_fixed.h  alarm_pattern.h  database.h  user.h
db/src/: alarm_fixed.cpp  alarm_pattern.cpp  database.cpp  user.cpp
mpd/: CMakeLists.txt
mpd/executable/: CMakeLists.txt  main.cpp
mpd/include/mpd/: mpd_telegram.h
mpd/src/: mpd_telegram.cpp  telegram_handler.cpp  telegram_handler.h  wrapper.cpp  wrapper.h
postgresql/: CMakeLists.txt
postgresql/executable/: CMakeLists.txt  main.cpp
postgresql/include/db/: database.h  table_user.h
postgresql/include/postgresql/: table_alarm.h  table_user.h
postgresql/src/: database.cpp  table_user.cpp
telegram/: CMakeLists.txt
telegram/executable/: CMakeLists.txt  main.cpp
telegram/include/telegram/: alarm.h  bot.h  datetime.h
telegram/src/: alarm.cpp  bot.cpp  datetime.cpp
